[gd_scene load_steps=108 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://resources/Warrior/SpriteSheet/Warrior_SheetnoEffect.png" type="Texture" id=2]
[ext_resource path="res://resources/Warrior/SpriteSheet/Warrior_Sheet-Effect.png" type="Texture" id=3]
[ext_resource path="res://resources/Warrior/Individual Sprite (cópia)/idle/Warrior_Idle_2.png" type="Texture" id=4]
[ext_resource path="res://resources/Warrior/Individual Sprite (cópia)/idle/Warrior_Idle_6.png" type="Texture" id=5]
[ext_resource path="res://resources/Warrior/Individual Sprite (cópia)/idle/Warrior_Idle_1.png" type="Texture" id=6]
[ext_resource path="res://resources/Warrior/Individual Sprite (cópia)/idle/Warrior_Idle_5.png" type="Texture" id=7]
[ext_resource path="res://resources/Warrior/Individual Sprite (cópia)/idle/Warrior_Idle_4.png" type="Texture" id=8]
[ext_resource path="res://resources/Warrior/Individual Sprite (cópia)/idle/Warrior_Idle_3.png" type="Texture" id=9]
[ext_resource path="res://resources/Warrior/Individual Sprite/Attack/Warrior_Attack_10.png" type="Texture" id=10]
[ext_resource path="res://resources/Warrior/Individual Sprite/Attack/Warrior_Attack_11.png" type="Texture" id=11]
[ext_resource path="res://resources/Warrior/Individual Sprite/Attack/Warrior_Attack_12.png" type="Texture" id=12]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_7.png" type="Texture" id=13]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_2.png" type="Texture" id=14]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_4.png" type="Texture" id=15]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_5.png" type="Texture" id=16]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_3.png" type="Texture" id=17]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_1.png" type="Texture" id=18]
[ext_resource path="res://resources/Warrior/Individual Sprite/Dash/Warrior_Dash_6.png" type="Texture" id=19]
[ext_resource path="res://resources/Warrior/Individual Sprite/UptoFall/Warrior_UptoFall_2.png" type="Texture" id=20]
[ext_resource path="res://resources/Warrior/Individual Sprite/UptoFall/Warrior_UptoFall_1.png" type="Texture" id=21]
[ext_resource path="res://player/WARRIOR.tscn" type="PackedScene" id=22]
[ext_resource path="res://resources/Warrior/Individual Sprite/Crouch/Warrior_Crouch_3.png" type="Texture" id=23]
[ext_resource path="res://resources/Warrior/Individual Sprite/Crouch/Warrior_Crouch_5.png" type="Texture" id=24]
[ext_resource path="res://resources/Warrior/Individual Sprite/Crouch/Warrior_Crouch_4.png" type="Texture" id=25]
[ext_resource path="res://resources/Warrior/Individual Sprite/Crouch/Warrior_Crouch_1.png" type="Texture" id=26]
[ext_resource path="res://resources/Warrior/Individual Sprite/Crouch/Warrior_Crouch_2.png" type="Texture" id=27]
[ext_resource path="res://resources/Warrior/Individual Sprite/Crouch/Warrior_Crouch_6.png" type="Texture" id=28]
[ext_resource path="res://resources/bar_ammo_progress.png" type="Texture" id=29]
[ext_resource path="res://resources/bar_ammo.png" type="Texture" id=30]

[sub_resource type="AnimationNodeAnimation" id=81]
animation = "dash"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=92]
animation = "defend"

[sub_resource type="AnimationNodeAnimation" id=87]
animation = "dodge"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "move"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "slash"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "strong_slash"

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
advance_condition = "attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2
auto_advance = true
advance_condition = "not_movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
advance_condition = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
advance_condition = "not_movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
advance_condition = "attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2
advance_condition = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
advance_condition = "death"

[sub_resource type="AnimationNodeStateMachineTransition" id=76]
advance_condition = "consecutive_atk"

[sub_resource type="AnimationNodeStateMachineTransition" id=77]
switch_mode = 2
advance_condition = "not_movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=78]
switch_mode = 2
auto_advance = true
advance_condition = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
advance_condition = "dash"

[sub_resource type="AnimationNodeStateMachineTransition" id=83]
switch_mode = 2
advance_condition = "not_movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=85]
advance_condition = "dash"

[sub_resource type="AnimationNodeStateMachineTransition" id=86]
switch_mode = 2
advance_condition = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=88]
advance_condition = "dodge"

[sub_resource type="AnimationNodeStateMachineTransition" id=89]
switch_mode = 2
advance_condition = "movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=90]
advance_condition = "dodge"

[sub_resource type="AnimationNodeStateMachineTransition" id=91]
switch_mode = 2
advance_condition = "not_movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=93]
advance_condition = "defense"

[sub_resource type="AnimationNodeStateMachineTransition" id=94]
advance_condition = "not_movement"

[sub_resource type="AnimationNodeStateMachineTransition" id=95]
advance_condition = "defense"

[sub_resource type="AnimationNodeStateMachineTransition" id=96]
switch_mode = 1
auto_advance = true
advance_condition = "movement"

[sub_resource type="AnimationNodeStateMachine" id=34]
states/dash/node = SubResource( 81 )
states/dash/position = Vector2( -149.652, 363.72 )
states/dead/node = SubResource( 52 )
states/dead/position = Vector2( 499, 358.72 )
states/defend/node = SubResource( 92 )
states/defend/position = Vector2( 384, 552.562 )
states/dodge/node = SubResource( 87 )
states/dodge/position = Vector2( -339.293, 243.924 )
states/idle/node = SubResource( 30 )
states/idle/position = Vector2( 79, 211 )
states/move/node = SubResource( 47 )
states/move/position = Vector2( 25, 400.72 )
states/slash/node = SubResource( 31 )
states/slash/position = Vector2( 504, 264 )
states/strong_slash/node = SubResource( 75 )
states/strong_slash/position = Vector2( 504, 139 )
transitions = [ "idle", "slash", SubResource( 45 ), "slash", "idle", SubResource( 46 ), "idle", "move", SubResource( 48 ), "move", "idle", SubResource( 49 ), "move", "slash", SubResource( 50 ), "slash", "move", SubResource( 51 ), "idle", "dead", SubResource( 53 ), "slash", "dead", SubResource( 54 ), "move", "dead", SubResource( 55 ), "slash", "strong_slash", SubResource( 76 ), "strong_slash", "idle", SubResource( 77 ), "strong_slash", "move", SubResource( 78 ), "idle", "dash", SubResource( 82 ), "dash", "idle", SubResource( 83 ), "move", "dash", SubResource( 85 ), "dash", "move", SubResource( 86 ), "move", "dodge", SubResource( 88 ), "dodge", "move", SubResource( 89 ), "idle", "dodge", SubResource( 90 ), "dodge", "idle", SubResource( 91 ), "idle", "defend", SubResource( 93 ), "defend", "idle", SubResource( 94 ), "move", "defend", SubResource( 95 ), "defend", "move", SubResource( 96 ) ]
start_node = "idle"
end_node = "dead"
graph_offset = Vector2( -306.038, 240.733 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=44]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 28.25, 54.5 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 138, 176, 69, 44 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 207, 176, 69, 44 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 276, 176, 69, 44 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 345, 176, 69, 44 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 220, 69, 44 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 69, 220, 69, 44 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 138, 220, 69, 44 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 207, 220, 69, 44 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 276, 220, 69, 44 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 345, 220, 69, 44 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 264, 69, 44 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 69, 44 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 69, 0, 69, 44 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 138, 0, 69, 44 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 207, 0, 69, 44 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 276, 0, 69, 44 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 345, 0, 69, 44 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 44, 69, 44 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 69, 44, 69, 44 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 138, 44, 69, 44 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 207, 44, 69, 44 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 276, 44, 69, 44 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 345, 44, 69, 44 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 88, 69, 44 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 69, 88, 69, 44 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 276, 528, 69, 44 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 345, 528, 69, 44 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 572, 69, 44 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 69, 572, 69, 44 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 138, 572, 69, 44 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 207, 572, 69, 44 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 276, 572, 69, 44 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 345, 572, 69, 44 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 28 ) ],
"loop": false,
"name": "defend",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ) ],
"loop": true,
"name": "dodge",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle2",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "slash",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "strong_slash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 13.8891, 9.93794 )

[sub_resource type="Animation" id=97]
resource_name = "defend"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "defend" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=68]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "slash" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AtaqueHit/AtaqueColisao:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../PlayerCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AtaqueHit2/BonusATKColisao:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=69]
resource_name = "dead"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.02, 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../PlayerCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=70]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 5, 5 ]
}

[sub_resource type="Animation" id=71]
resource_name = "move"
length = 0.8
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.224879, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=72]
resource_name = "slash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "slash" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AtaqueHit/AtaqueColisao:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=80]
resource_name = "strong_slash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "strong_slash" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AtaqueHit2/BonusATKColisao:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AtaqueHit/AtaqueColisao:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D" groups=["hurtbox", "player"]]
unique_name_in_owner = true
position = Vector2( 9.53674e-07, -56 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
tree_root = SubResource( 34 )
anim_player = NodePath("../Class/WARRIOR")
active = true
root_motion_track = NodePath(".")
parameters/playback = SubResource( 44 )
parameters/conditions/attack = false
parameters/conditions/consecutive_atk = false
parameters/conditions/dash = false
parameters/conditions/death = false
parameters/conditions/defense = false
parameters/conditions/dodge = false
parameters/conditions/movement = false
parameters/conditions/not_movement = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( -23.25, 14.5 )
z_as_relative = false
shape = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -23, 13 )

[node name="SpritesAnimacao" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 3.00725, 3.29545 )
frames = SubResource( 7 )
animation = "slash"

[node name="AtaqueHit" type="Area2D" parent="SpritesAnimacao"]
position = Vector2( 21.2819, 8.19312 )

[node name="AtaqueColisao" type="CollisionShape2D" parent="SpritesAnimacao/AtaqueHit"]
position = Vector2( -0.332527, 0 )
shape = SubResource( 36 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="AtaqueHit2" type="Area2D" parent="SpritesAnimacao"]
position = Vector2( 21.6144, 8.19312 )

[node name="BonusATKColisao" type="CollisionShape2D" parent="SpritesAnimacao/AtaqueHit2"]
shape = SubResource( 36 )
disabled = true

[node name="Class" type="Node" parent="."]

[node name="WARRIOR" parent="Class" instance=ExtResource( 22 )]
anims/defend = SubResource( 97 )

[node name="THIEF" type="AnimationPlayer" parent="Class"]
unique_name_in_owner = true
root_node = NodePath("../../SpritesAnimacao")
anims/RESET = SubResource( 68 )
anims/dead = SubResource( 69 )
anims/idle = SubResource( 70 )
anims/move = SubResource( 71 )
anims/slash = SubResource( 72 )
anims/strong_slash = SubResource( 80 )

[node name="Effects" type="Node" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="VidaChar" type="TextureProgress" parent="."]
margin_left = -66.25
margin_top = 71.25
margin_right = 18.75
margin_bottom = 77.25
texture_under = ExtResource( 30 )
texture_progress = ExtResource( 29 )

[node name="Popup" type="PopupDialog" parent="."]
visible = true
margin_left = -246.0
margin_top = -135.0
margin_right = 267.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="Popup"]
margin_left = 13.0
margin_top = 13.0
margin_right = 291.0
margin_bottom = 150.0
rect_scale = Vector2( 1.75155, 1.85738 )
align = 1
valign = 1

[connection signal="area_entered" from="SpritesAnimacao/AtaqueHit" to="." method="_on_AtaqueHit_area_entered"]
[connection signal="body_entered" from="SpritesAnimacao/AtaqueHit" to="." method="_on_AtaqueHit_body_entered"]
[connection signal="body_entered" from="SpritesAnimacao/AtaqueHit2" to="." method="_on_AtaqueHit2_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
